--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,9 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --darkBg: #fff;
+  --cardBg: #fff;
+  --neon: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
